# mcp-wikidata

./: README.md  pyproject.toml
src/: client.py  server.py
