[project]
name = "mcp-wikidata"
version = "0.1.0"
description = "MCP Wikidata Server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.14.0",
    "httpx>=0.28.1",
    "langchain-community>=0.3.29",
    "mediawikiapi>=1.3",
    "wikibase-rest-api-client>=0.2.5",
]
authors = [{ name = "Jaebok Lee" }]

[project.optional-dependencies]
example = [
    "black>=25.1.0",
    "langchain-openai>=0.3.33",
    "langgraph>=0.6.7",
    "langchain-core>=0.3.76",
    "langchain-mcp-adapters>=0.1.9",
]
